--- a/src/styles/Modal.scss
+++ b/src/styles/Modal.scss
@@ -6,6 +6,7 @@
   left: 0;
   display: flex;
   justify-content: center;
+  z-index: $z-layer-modal;
 
   &__overlay {
     height: 100%;
@@ -53,7 +54,7 @@
       height: calc(100vh - 20%);
 
       &-children {
-        height: calc(100% - 40px);
+        height: 100%;
         display: flex;
         align-items: center;
         overflow-y: scroll;
